--- a/index.html
+++ b/index.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Projeto Gato</title>
-</head>
-<body>
-        <header>
-            <h1>&lt;h1&gt; projeto-gato &lt;/h1&gt;</h1>
-        </header>
-        <nav>
-            <div id="menu">
-                <a href="#" target="quadro">V.0.1</a>
-                <a href="#" target="quadro">V.0.2</a>
-                <a href="#" target="quadro">V.0.3</a>
-                <a href="#" target="quadro">V.0.4</a>
-                <a href="#" target="quadro">V.0.5</a>
-            </div>
-        </nav>
+  </head>
+  <body>
+    <header>
+      <h1>
+        <span class="cor1 titulo">&lt;</span><span class="cor2 titulo">h1</span
+        ><span class="cor1 titulo">&gt;</span
+        ><a class="linkt titulo" href="#">projeto-gato</a>
+        <span class="cor1 titulo">&lt;/</span><span class="cor2 titulo">h1</span
+        ><span class="cor1 titulo">&gt;</span>
+      </h1>
+    </header>
+    <nav>
+      <div id="menu">
+        <a class="linkmenu" href="projetos/questionario-23-01-23/main.html" target="quadro">V.0.1</a>
+        <a class="linkmenu" href="projetos/questionario-25-01-23/index.html" target="quadro">V.0.2</a>
+        <a class="linkmenu" href="#" target="quadro">V.0.3</a>
+        <a class="linkmenu" href="#" target="quadro">V.0.4</a>
+        <a class="linkmenu" href="#" target="quadro">V.0.5</a>
+      </div>
+    </nav>
     <main>
-        <iframe name="quadro" src="https://dennerrubio.github.io/estudos-dev/html-css/curso-em-video/desafios/de10/index.html" frameborder="0"></iframe>
+      <iframe
+        name="quadro"
+        src="https://dennerrubio.github.io/estudos-dev/html-css/curso-em-video/desafios/de10/index.html"
+        frameborder="0"
+      ></iframe>
     </main>
     <footer>
-        <p>Lorem ipsum, dolor sit amet consectetur.</p>
+      <p>
+        <span class="cor1">&lt;</span><span class="cor2">p</span
+        ><span class="cor1">&gt;</span>Criado por Denner Rubio, visite meu
+        <span class="cor1">&lt;</span><span class="cor2">a</span
+        ><span class="cor1">&gt;</span
+        ><a class="linkf" href="https://github.com/dennerrubio" target="_blank"
+          >Github</a
+        ><span class="cor1">&lt;/</span><span class="cor2">a</span
+        ><span class="cor1">&gt;</span>.<span class="cor1">&lt;/</span
+        ><span class="cor2">p</span><span class="cor1">&gt;</span>
+      </p>
     </footer>
-</body>
+  </body>
 </html>
