--- a/projetos/questionario-25-01-23/index.html
+++ b/projetos/questionario-25-01-23/index.html
@@ -130,7 +130,7 @@
             <hr>
     <!--FOOTER-->
             <footer>
-                <h5>Desenvolvido por Denner Rubio, 2023.</h5>
+                <h5>Desenvolvido por Denner Rubio, 25-01-23.</h5>
                 <h5 class="monitoramento">Monitorado pela Nami.</h5>
             </footer>
         </div>
