--- a/projetos/questionario-23-01-23/main.html
+++ b/projetos/questionario-23-01-23/main.html
@@ -4,6 +4,7 @@
         <meta charset="UTC-8">
         <title>Questionário Nami - 23-01-23</title>
         <style>
+            body {background-color: white;}
             h1 {text-align:center;}
             h2 {text-align:center;}
             h5 {text-align:center;}
@@ -108,7 +109,7 @@
             </form>
     </body>
     <footer>
-        <h5>Desenvolvido por Denner Rubio, 2023. Monitorado pela Nami.</h5>
+        <h5>Desenvolvido por Denner Rubio, 23-01-23. Monitorado pela Nami.</h5>
     </footer>
     </main>
 </html>
