--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>
         <span class="cor1 titulo">&lt;</span><span class="cor2 titulo">h1</span
         ><span class="cor1 titulo">&gt;</span
-        ><a class="linkt titulo" href="#">projeto-gato</a>
+        ><a class="linkt titulo" href="projetos/principal/principal.html" target="quadro">projeto-gato</a>
         <span class="cor1 titulo">&lt;/</span><span class="cor2 titulo">h1</span
         ><span class="cor1 titulo">&gt;</span>
       </h1>
@@ -26,7 +26,7 @@
     <main>
       <iframe
         name="quadro"
-        src="https://dennerrubio.github.io/estudos-dev/html-css/curso-em-video/desafios/de10/index.html"
+        src="projetos/principal/principal.html"
         frameborder="0"
       ></iframe>
     </main>
