--- a/projetos/questionario-05-03-23/index.html
+++ b/projetos/questionario-05-03-23/index.html
@@ -28,6 +28,8 @@
       <section id="setor3">section3</section>
       <section id="form">formulario</section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Desenvolvido por Denner Rubio, 05-03-23. Monitorado pela Nami.</p>
+    </footer>
   </body>
 </html>
