--- a/projetos/questionario-05-03-23/index.html
+++ b/projetos/questionario-05-03-23/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <header>
+      <!-- MENU -->
       <div id="menu">
-        <p>Questionário da Nami</p>
+        <h2>Questionário da Nami</h2>
         <nav>
           <a href="#setor1">Amor</a>
           <a href="#setor2">Neutralidade</a>
@@ -18,16 +19,36 @@
           <a href="#form">Formulário</a>
         </nav>
       </div>
+      <!-- IMAGENS E TEXTOS DO HEADER -->
+      <div id="insideheader">
+        <div id="textoheader">
+          <h1>UM SITE SOBRE O MEU GATO.</h1>
+        </div>
+        <div id="fotoheader">
+          <img id="fotogato" src="images/gatoheader.png" alt="gato" />
+        </div>
+      </div>
     </header>
     <main>
-      <aside>aside1</aside>
+      <!-- BLOCO 1 -->
+      <aside>
+        <img src="images/gato1.jpeg" alt="nami" />
+      </aside>
       <section id="setor1">section1</section>
-      <aside>aside2</aside>
+      <!-- BLOCO 2 -->
+      <aside>
+        <img src="images/gato2.jpg" alt="césar" />
+      </aside>
       <section id="setor2">section2</section>
-      <aside>aside3</aside>
+      <!-- BLOCO 3 -->
+      <aside>
+        <img src="images/dog1.jpg" alt="mafalda" />
+      </aside>
       <section id="setor3">section3</section>
+      <!-- FORMULÁRIO -->
       <section id="form">formulario</section>
     </main>
+    <div id="imagemfundo"></div>
     <footer>
       <p>Desenvolvido por Denner Rubio, 05-03-23. Monitorado pela Nami.</p>
     </footer>
