--- a/projetos/questionario-05-03-23/index.html
+++ b/projetos/questionario-05-03-23/index.html
@@ -13,9 +13,9 @@
       <div id="menu">
         <h2>Questionário da Nami</h2>
         <nav>
-          <a href="#setor1">Amor</a>
-          <a href="#setor2">Neutralidade</a>
-          <a href="#setor3">Ódio</a>
+          <a href="#pag1">Amor</a>
+          <a href="#pag2">Neutralidade</a>
+          <a href="#pag3">Ódio</a>
           <a href="#form">Formulário</a>
         </nav>
       </div>
@@ -34,19 +34,58 @@
       <aside>
         <img src="images/gato1.jpeg" alt="nami" />
       </aside>
-      <section id="setor1">section1</section>
+      <section id="pag1">
+        <div id="setor1">
+          <h3>Coisas que sabemos que a Nami gosta:</h3>
+          <ol>
+            <li>Whiskas Sachê</li>
+            <li>Sacolas</li>
+            <li>
+              Se vingar de forma impiedosa de qualquer pessoa que tenha ido
+              contra as suas virtudes em algum momento
+            </li>
+            <li>Brinquedos com Penas</li>
+          </ol>
+        </div>
+      </section>
       <!-- BLOCO 2 -->
-      <aside>
+      <aside class="fundosecundario">
         <img src="images/gato2.jpg" alt="césar" />
       </aside>
-      <section id="setor2">section2</section>
+      <section class="fundosecundario" id="pag2">
+        <div id="setor2">
+          <h3>Coisas que não temos certeza se ela gosta:</h3>
+          <ul>
+            <li>Que imita ela miando</li>
+            <li>
+              Que dê carinho nela no sol (Ela morde o seu pé, qual o propósito?)
+            </li>
+            <li>Do César</li>
+          </ul>
+        </div>
+      </section>
       <!-- BLOCO 3 -->
       <aside>
         <img src="images/dog1.jpg" alt="mafalda" />
       </aside>
-      <section id="setor3">section3</section>
+      <section id="pag3">
+        <div id="setor3">
+          <h3>Coisas que a Nami odeia:</h3>
+          <ul>
+            <li>Ser ignorada</li>
+            <li>Não ser prioridade</li>
+            <li>Ser odiada</li>
+            <li>Ser amada</li>
+            <li>Receber muita atenção</li>
+            <li>Receber pouca atenção</li>
+            <li>Ser acordada antes da hora</li>
+            <li>Ela odeia que você não advinhe quando ela sente fome</li>
+            <li>Mafalda</li>
+          </ul>
+        </div>
+      </section>
       <!-- FORMULÁRIO -->
-      <section id="form">formulario</section>
+      <section id="form" class="fundosecundario">formulario</section>
     </main>
     <div id="imagemfundo"></div>
     <footer>
