--- a/projetos/principal/principal.html
+++ b/projetos/principal/principal.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleprincipal.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styleprincipal.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="fundo">
-        <div id="container"><p><span class="cor1">&lt;</span><span class="cor2">p</span
-            ><span class="cor1">&gt;</span>A versão V.0.1 foi feita na primeira semana que aprendi HTML (23-01-23), é literalmente o meu primeiro projeto, desde então decidi ir refazendo este site para ver o meu progresso.<span class="cor1">&lt;</span><span class="cor2">p</span
-                ><span class="cor1">&gt;</span></p>
-        <img src="imagens/gato.png" alt="gato">
-    <p class="cor3">&lt;!-- Clique nos botões acima para visitar os sites e ver as suas mudanças ao longo do tempo --&gt;</p></div>
+      <div id="container">
+        <p>
+          <span class="cor1">&lt;</span><span class="cor2">p</span
+          ><span class="cor1">&gt;</span>A versão V.0.1 foi feita na primeira
+          semana que aprendi HTML (23-01-23), é literalmente o meu primeiro
+          projeto, desde então decidi ir refazendo este site para ver o meu
+          progresso.<span class="cor1">&lt;</span><span class="cor2">p</span
+          ><span class="cor1">&gt;</span>
+        </p>
+        <img src="imagens/gato.png" alt="gato" />
+        <p class="cor3">
+          &lt;!-- Clique nos botões acima para visitar os sites e ver as suas
+          mudanças ao longo do tempo --&gt;
+        </p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
-<!-- TESTE COMENTARIO -->
