--- a/projetos/questionario-05-03-23/index.html
+++ b/projetos/questionario-05-03-23/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mediaq.css" />
+    <script src="script.js"></script>
     <title>Questionário Nami - 05-03-23</title>
   </head>
   <body>
@@ -71,6 +72,10 @@
             </li>
             <li>Do César</li>
           </ul>
+          <h3>Incertezas</h3>
+          <p>
+            A verdade é que ninguém sabe se a Nami gosta do César, a relação deles é estranha, ela o morde e ele parece temer ela, porém sempre estão juntos.
+          </p>
         </div>
       </section>
       <!-- BLOCO 3 -->
@@ -104,42 +109,128 @@
       <section id="form" class="fundosecundario">
         <form id="final">
           <h3>Formulário da Nami</h3>
-          <p> Agora iremos coletar algumas informações sobre suas experiências com a Nami, lembrando que este é um questionário totalmente seguro,
-              a Nami provavelmente não vai ficar sabendo, por via das dúvidas, não comente deste questionário com ninguém.
+          <p>
+            Agora iremos coletar algumas informações sobre suas experiências com
+            a Nami, lembrando que este é um questionário totalmente seguro, a
+            Nami provavelmente não vai ficar sabendo, por via das dúvidas, não
+            comente deste questionário com ninguém.
           </p>
           <fieldset>
             <legend>Como você descreveria a sua relação com a Nami?</legend>
-               <input type="radio" id="amorosa" name="relacao" value="amorosa"><label for="amorosa">Amorosa</label>
-               <input type="radio" id="neutra" name="relacao" value="neutra"><label for="neutra">Neutra</label>
-               <input type="radio" id="complicada" name="relacao" value="complicada"><label for="complicada">Complicada</label>
-               <input type="radio" id="medo" name="relacao" value="medo"><label for="medo">Eu sinto medo constante da Nami</label>
-            </fieldset>
-            <fieldset>
-              <legend>A Nami em algum momento já atacou você?</legend>
-             <input type="radio" id="sim1" name="ataque" value="sim1"><label for="sim1">Sim, mais de uma vez</label>
-             <input type="radio" id="sim2" name="ataque" value="sim2"><label for="sim2">Sim, uma vez apenas</label>
-             <input type="radio" id="nao" name="ataque" value="nao"><label for="nao">Não</label>
-              <input type="radio" id="medo2" name="ataque" value="medo2"><label for="medo2">Eu sinto medo constante da Nami</label>
+            <input
+              type="radio"
+              id="amorosa"
+              name="relacao"
+              value="amorosa"
+            /><label for="amorosa">Amorosa</label>
+            <input
+              type="radio"
+              id="neutra"
+              name="relacao"
+              value="neutra"
+            /><label for="neutra">Neutra</label>
+            <input
+              type="radio"
+              id="complicada"
+              name="relacao"
+              value="complicada"
+            /><label for="complicada">Complicada</label>
+            <input type="radio" id="medo" name="relacao" value="medo" /><label
+              for="medo"
+              >Eu sinto medo constante da Nami</label
+            >
           </fieldset>
           <fieldset>
-             <legend>Você denunciaria a Nami para as autoridades?</legend>
-             <input type="radio" id="sim3" name="denuncia" value="sim3"><label for="sim3">Sim</label>
-             <input type="radio" id="nao2" name="denuncia" value="nao2"><label for="nao2">Não</label>
-             <input type="radio" id="medo3" name="denuncia" value="medo3"><label for="medo3">Eu sinto medo constante da Nami</label>
-         </fieldset>
-         <fieldset>
-             <legend>Selecione caracteristicas que você ache que definam a Nami:</legend>
-             <input type="checkbox" name="caixinhas" id="atenciosa" value="atenciosa"><label for="atenciosa">Atenciosa</label>
-             <input type="checkbox" name="caixinhas" id="soberba" value="soberba"><label for="soberba">Soberba</label>
-             <input type="checkbox" name="caixinhas" id="fada" value="fada"><label for="fada">Fada Sensata</label>
-             <input type="checkbox" name="caixinhas" id="comunista" value="comunista"><label for="comunista">Comunista</label>
-             <input type="checkbox" name="caixinhas" id="macabra" value="macabra"><label for="macabra">Macabra</label>
-             <input type="checkbox" name="caixinhas" id="vingativa" value="vingativa"><label for="vingativa">Vingativa</label>
-             <input type="checkbox" name="caixinhas" id="safada" value="safada"><label for="safada">Safada</label>
-             <input type="checkbox" name="caixinhas" id="resiliente" value="resiliente"><label for="resiliente">Resiliente</label>
-         </fieldset>
-          <input type="submit" value="Enviar formulário">   
-          <input type="reset" value="Resetar formulário">   
+            <legend>A Nami em algum momento já atacou você?</legend>
+            <input type="radio" id="sim1" name="ataque" value="sim1" /><label
+              for="sim1"
+              >Sim, mais de uma vez</label
+            >
+            <input type="radio" id="sim2" name="ataque" value="sim2" /><label
+              for="sim2"
+              >Sim, uma vez apenas</label
+            >
+            <input type="radio" id="nao" name="ataque" value="nao" /><label
+              for="nao"
+              >Não</label
+            >
+            <input type="radio" id="medo2" name="ataque" value="medo2" /><label
+              for="medo2"
+              >Eu sinto medo constante da Nami</label
+            >
+          </fieldset>
+          <fieldset>
+            <legend>Você denunciaria a Nami para as autoridades?</legend>
+            <input type="radio" id="sim3" name="denuncia" value="sim3" /><label
+              for="sim3"
+              >Sim</label
+            >
+            <input type="radio" id="nao2" name="denuncia" value="nao2" /><label
+              for="nao2"
+              >Não</label
+            >
+            <input
+              type="radio"
+              id="medo3"
+              name="denuncia"
+              value="medo3"
+            /><label for="medo3">Eu sinto medo constante da Nami</label>
+          </fieldset>
+          <fieldset>
+            <legend>
+              Selecione caracteristicas que você ache que definam a Nami:
+            </legend>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="atenciosa"
+              value="atenciosa"
+            /><label for="atenciosa">Atenciosa</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="soberba"
+              value="soberba"
+            /><label for="soberba">Soberba</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="fada"
+              value="fada"
+            /><label for="fada">Fada Sensata</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="comunista"
+              value="comunista"
+            /><label for="comunista">Comunista</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="macabra"
+              value="macabra"
+            /><label for="macabra">Macabra</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="vingativa"
+              value="vingativa"
+            /><label for="vingativa">Vingativa</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="safada"
+              value="safada"
+            /><label for="safada">Safada</label>
+            <input
+              type="checkbox"
+              name="caixinhas"
+              id="resiliente"
+              value="resiliente"
+            /><label for="resiliente">Resiliente</label>
+          </fieldset>
+          <input type="submit" value="Enviar formulário"/>
+          <input type="reset" value="Resetar formulário" />
         </form>
       </section>
     </main>
