--- a/projetos/questionario-23-01-23/main.html
+++ b/projetos/questionario-23-01-23/main.html
@@ -14,7 +14,7 @@
     <body>
         <section>
         <h1>Questionário sobre a Nami</h1>
-        <h2>Uma análise sobre o comportamento de felinos tricolores</h2>
+        <h2>Uma análise sobre o comportamento de felinos tricolores.</h2>
         <p> Se você recebeu esse formulário é possível que você tenha tido uma experiência negativa com o meu gato - a Nami -, logo teremos uma breve descrição sobre a sua
             personalidade e abriremos um questionário para analisar o comportamento dela com a finalidade de coletar feedback. 
         </p>
@@ -48,7 +48,7 @@
             <h2>Coisas que a Nami odeia:</h2>
             <ul>
                 <li>Ser ignorada</li>
-                <li>Não ser prioridade</li>
+                <li>Não ser prioridade dos outros</li>
                 <li>Ser odiada</li>
                 <li>Ser amada</li>
                 <li>Receber muita atenção</li>
