--- a/projetos/questionario-23-01-23/main.html
+++ b/projetos/questionario-23-01-23/main.html
@@ -63,7 +63,7 @@
             <figcaption>A Nami <strong>realmente</strong> não gosta da Mafalda.</figcaption>
         </figure>
         <section>
-            <h2>Formulário da Nami</h2>
+            <h2>Formulário sobre a Nami</h2>
             <p> Agora iremos coletar algumas informações sobre suas experiências com a Nami, lembrando que este é um questionário totalmente seguro,
                 a Nami <em>provavelmente</em> não vai ficar sabendo, por via das dúvidas, não comente deste questionário <strong>com ninguém.</strong>
             </p>
