--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <footer>
       <p>
         <span class="cor1">&lt;</span><span class="cor2">p</span
-        ><span class="cor1">&gt;</span>Criado por Denner Rubio, visite meu
+        ><span class="cor1">&gt;</span>Criado por Denner Rubio, visite o meu
         <span class="cor1">&lt;</span><span class="cor2">a</span
         ><span class="cor1">&gt;</span
         ><a class="linkf" href="https://github.com/dennerrubio" target="_blank"
